# edifacil

./: .env  .gitignore  README.md  pyproject.toml
edifacil/: db.sqlite3
edifacil/apps/accounts/: backends.py  forms.py  models.py  urls.py  views.py
edifacil/apps/accounts/migrations/: 0001_initial.py
edifacil/apps/accounts/templates/: sign_in.html  sign_up.html
edifacil/apps/edifices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
edifacil/apps/edifices/migrations/: 0001_initial.py  0002_edifice_user.py  0003_edifice_fixed_bill_and_more.py  0004_monthbilling_cleaning_material_bill_amount_and_more.py  0005_monthbilling_trash_bill_amount.py  0006_monthbilling_iptu_bill_amount_and_more.py  0007_monthbilling_month_and_more.py  0008_monthbilling_sewage_bill_amount.py  0009_alter_condominiumbilling_options_and_more.py  0010_residence_iptu_residence_rent.py  0011_remove_monthbilling_iptu_bill_amount_and_more.py  0012_condominiumbilling_iptu_condominiumbilling_rent_and_more.py  0013_remove_condominiumbilling_iptu_and_more.py  0014_condominiumbilling_iptu_condominiumbilling_rent.py
edifacil/apps/edifices/templates/: condominium.html  dashboard.html  edifice.html  generate_condominium.html  residence_detail.html  residence_update.html
edifacil/apps/edifices/templates/partials/: condominium_billing_pdf.html
edifacil/core/: env_settings.py  settings.py  urls.py
edifacil/templates/base_htmls/: base.html
edifacil/templates/partials/: form.html  form_field.html  messages.html  navbar.html
edifacil/templates/static/general/js/: scripts.js
